# mitto

./: .gitignore  Cargo.toml  README.md  mitto-capture.sh
.github/workflows/: package.yml
debian/: service
files/: mitto.toml.example  nginx.txt  sharex.sxcu  spec.yaml  upload.html
src/: auth.rs  error.rs  main.rs
