[package]
name = "mitto"
description = "A file upload server compatible with ShareX."
version = "1.1.0"
authors = ["Sandro Marques <sandro123iv@gmail.com>"]
repository = "https://github.com/SandroHc/mitto"
license = "GPL-3.0-or-later"
keywords = ["file-upload", "sharex"]
readme = "README.md"
edition = "2021"
include = ["/debian", "/src", "LICENSE"]

[dependencies]
actix-multipart = "0.6"
actix-web = { version = "4.1", features = ["rustls"] }
actix-web-httpauth = "0.8"
chrono = "0.4"
confy = "0.6"
futures = "0.3"
mime = "0.3"
sanitize-filename = "0.5"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
strip = "symbols"
#codegen-units = 1
#opt-level = "z"  # Optimize for size

[package.metadata.deb]
depends = "$auto"
section = "httpd"
priority = "optional"
maintainer-scripts = "debian"
systemd-units = { }
